--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
  jobs:
    one:
      docker:
-       - image: circleci/ruby:2.4.1
+       - image: quoinedev/python3.6-pandas-alpine
      steps:
        - checkout
        - run: echo "A first hello"
@@ -13,7 +13,8 @@
      steps:
        - checkout
        - run: echo "A more familiar hi"
-       - run: sleep 15
+       - run: sleep 5
+       - run: echo "A more familiar hi2"
  workflows:
    version: 2
    one_and_two:
