--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,8 @@
      working_directory: ~/
      docker:
        - image: circleci/python:3.6.4
-     steps:
-       - checkout
-       - run:
-         command: |
-           sudo pip install pipenv
-           pipenv install
-       - run:
-         command: |
-           pipenv run pytest test_sample.py
+     steps: 
+       - checkout 
+       - run: sudo pip install pipenv
+       - run: pipenv install
+       - run: pipenv run pytest test_sample.py
