--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,7 @@
      docker:
        - image: circleci/python:3.6.4
      steps: 
-       - run: pwd
        - checkout
-       - run: pwd
-       - run: sudo pip install pytest
-       - run: pytest test_sample.py 
+       - run: sudo pip install pipenv
+       - run: pipenv install
+       - run: pipenv run pytest test_sample.py
