--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,4 @@
        - run: sudo pip install pipenv
        - run: pipenv install
        - run: pipenv run pytest test_sample.py
-       - run: echo "hello"
+       - run: echaaaao "hello"
